change endpoints names for roles
